fix scrollbars on related block

--- a/web/src/components/RelatedBlock/related.module.css
+++ b/web/src/components/RelatedBlock/related.module.css
@@ -87,7 +87,7 @@
   display: flex;
   gap:calc(var(--small-space) * 3);
   justify-content: flex-start;
-  overflow: scroll;
+  /* overflow: scroll; */
   margin-top: var(--space);
   flex-wrap: wrap;
   @media (--media-min-medium) {
